INFO8/Deploy/4. Kubernetes/sundaland-frontend/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sundaland-frontend
spec:
  selector:
    app: sundaland
    component: frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
