INFO8/Deploy/4. Kubernetes/sundaland-frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sundaland-frontend
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sundaland-frontend
                port:
                  name: http
